Updates to the About page

--- a/about.html
+++ b/about.html
@@ -154,8 +154,8 @@ permalink: /about/
         </div>
         <div class="hero center">
             <div class="container-1140">
-                <h1>About Me</h1>
-                <h2>Get to know me better</h2>
+                <h1>About Us</h1>
+                <h2>Get to know us better</h2>
                 
             </div>
         </div>
@@ -173,9 +173,9 @@ permalink: /about/
                 <h2>About Sybil</h2>
                 <hr class="left-align">
 
-                <p>Thank you for visiting my website. My name is Sybil Mayard. I founded Sybiltec in 2020 with a mission to make web design and development services more accessible and affordable to all, especially small businesses. Four years later, I'm proud to say that I've worked with several SMEs from various industry sectors to help them achieve their digital goals. My main services include websites for small businesses, <a href="https://sybiltec.com/ecommerce-websites/">e-commerce websites</a>, and online learning platforms.</p>
+                <p>Thank you for visiting our website. My name is Sybil Mayard. I founded Sybiltec in 2020 with a mission to make web design and development services more accessible and affordable to all, especially small businesses. Four years later, I'm proud to say that we've worked with several SMEs from various industry sectors to help them achieve their digital goals. Our main services include <a href="https://sybiltec.com/website-design/">websites for small businesses</a>, <a href="https://sybiltec.com/ecommerce-websites/">e-commerce websites</a>, and online learning platforms.</p>
 
-                <p>Current clients include the <a href="https://techdiplomacy.org" target="_blank" rel="noreferrer noopener">Krach Institute for Tech Diplomacy at Purdue</a>, where I am involved in designing and building an online portal for the new Tech Diplomacy Academy project which will be launching soon. I am also pleased to be working together with CNT Associates to deliver the Bexley Talking Business programme in association with the London Borough of Bexley and fully funded by the UK Shared Prosperity Fund.</p>
+                <p>Current clients include the <a href="https://techdiplomacy.org" target="_blank" rel="noreferrer noopener">Krach Institute for Tech Diplomacy at Purdue</a>, which involves designing and building an online portal for the new <a href="https://techdiplomacyacademy.org/" target="_blank" rel="noopener noreferrer">Tech Diplomacy Academy</a> project which has just launched. I am also pleased to be working together with CNT Associates to deliver the Bexley Talking Business programme in association with the London Borough of Bexley and fully funded by the UK Shared Prosperity Fund. More information can be found on the <a href="https://sybiltec.com/web-design-bexley/">Bexley Web Design</a> page.</p>
 
                 <p>I graduated in November 2019 from the University of Kent with a Distinction in MSc Computer Science. Previous roles include:</p>
                 <ul>
@@ -186,19 +186,19 @@ permalink: /about/
 
                 <p>I am also the founder of VidCareer. It's a start-up idea which began during my Masters course, and is an online platform for connecting small businesses with candidates through virtual career events, saving time and money. For more information about VidCareer and my other projects, please explore the <a href="https://sybiltec.com/projects/">Projects</a> page.</p>
 
-                <p>Click the button below to find out how I can help take your business to the next level.</p>
+                <p>Click the button below to find out how we can help take your business to the next level.</p>
                 
                 <div class="padding-top padding-bottom">
                     <a href="https://sybiltec.com/contact/" class="btn-primary">Contact us</a>
                 </div>
 
                 <div class="center">
-                    <h2>Values</h2>
+                    <h2>Our Values</h2>
                         <hr>
                     <div class="row">
                         <div class="col-2"><i class="fa-regular fa-circle-check"></i><p><strong>Committed to Succeed</strong></p></div>
                         <div class="col-2"><i class="fa-solid fa-people-group"></i><p><strong>Working Together</strong></p></div>
-                        <div class="col-2"><i class="fa-regular fa-handshake"></i><p><strong>Keeping My Promises</strong></p></div>
+                        <div class="col-2"><i class="fa-regular fa-handshake"></i><p><strong>Keeping Our Promises</strong></p></div>
                         <div class="col-2"><i class="fa-regular fa-comments"></i><p><strong>Regular Communication</strong></p></div>
                         <div class="col-2"><i class="fa-regular fa-clock"></i><p><strong>Delivering on Time</strong></p></div>
                         <div class="col-2"><i class="fa-solid fa-trophy"></i><p><strong>Exceeding Expectations</strong></p></div>
@@ -207,7 +207,7 @@ permalink: /about/
 
             <h2>The Team</h2>
             <hr class="left-align">
-            <p>As a business owner, you are probably aware that having a beautiful website is only one aspect of your business. Have you thought about photography, brand planning, copywriting, social media, data protection, or raising funds? I am committed to delivering the highest quality services to my customers in Bexley and the surrounding areas, therefore, I work alongside other professionals in related fields to provide much more than just a web design service. My team of experts can help you make your project a breeze. By partnering with the most knowledgeable and experienced individuals, you can rest assured that your project is in good hands. We take a collaborative approach and will work together with you to elevate your online presence and help your business achieve its potential.</p>
+            <p>As a business owner, you are probably aware that having a beautiful website is only one aspect of your business. Have you thought about photography, brand planning, copywriting, social media, data protection, or raising funds? We are committed to delivering the highest quality services to our customers in London, Kent and beyond, therefore, I work alongside other professionals in related fields to provide much more than just a web design service. My team of experts can help you make your project a breeze. By partnering with the most knowledgeable and experienced individuals, you can rest assured that your project is in good hands. We take a collaborative approach and will work together with you to elevate your online presence and help your business achieve its potential.</p>
 
             <div class="row">
                 <div class="col-6">
