Change "my blog" to "our blog"

--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -50,12 +50,12 @@ permalink: /6-tips-for-surviving-remote-working/
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Remote Working: How to Survive with 6 Tips | Blog | Sybiltec</title>       
-        <meta name="Description" content="Working remotely is essential where possible, due to the current pandemic. Read my blog for tips and advice if you find working from home a struggle.">
+        <meta name="Description" content="Working remotely is essential where possible, due to the current pandemic. Read our blog for tips and advice if you find working from home a struggle.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Remote Working: How to Survive with 6 Tips | Blog | Sybiltec" />
-        <meta property="og:description" content="Working remotely is essential where possible, due to the current pandemic. Read my blog for tips and advice if you find working from home a struggle." />
+        <meta property="og:description" content="Working remotely is essential where possible, due to the current pandemic. Read our blog for tips and advice if you find working from home a struggle." />
         <meta property="og:url" content="https://sybiltec.com/6-tips-for-surviving-remote-working/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/Laptop-notepad-pen-and-iphone-on-table-1200x630.jpg" />
@@ -233,7 +233,7 @@ permalink: /6-tips-for-surviving-remote-working/
 
                 <p>Once you have defined your routine and found what works for you, I am sure that you will find working from home to be a much more productive and efficient system – make the most of it!</p>
 
-                <p>Please also check out my blog post on <a href="https://sybiltec.com/5-best-tools-for-remote-working/">5 Best Tools For Remote Working</a>.</p>
+                <p>Please also check out our blog post on <a href="https://sybiltec.com/5-best-tools-for-remote-working/">5 Best Tools For Remote Working</a>.</p>
             </div>
         </div>
         <div class="contact section">
