--- a/best-free-wordpress-plugins.html
+++ b/best-free-wordpress-plugins.html
@@ -207,7 +207,7 @@ permalink: /best-free-wordpress-plugins/
 
                 <h2>4. UpdraftPlus - Backup/Restore</h2>
 
-                <p>Have you ever thought about what would happen if you lost your website? Would you be able to continue running your business if your website was hacked, or files were corrupted? To prevent any loss of data, it's essential that you backup your website on a regular basis. Fortunately, you can do this for free, using the UpdraftPlus plugin. UpdraftPlus allows you to create a copy of your website's files in a location of your choice, for example, Dropbox or Google Drive. For more information, read my blog post on <a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus/">How to Backup Your WordPress Website with UpdraftPlus</a>. </p>
+                <p>Have you ever thought about what would happen if you lost your website? Would you be able to continue running your business if your website was hacked, or files were corrupted? To prevent any loss of data, it's essential that you backup your website on a regular basis. Fortunately, you can do this for free, using the UpdraftPlus plugin. UpdraftPlus allows you to create a copy of your website's files in a location of your choice, for example, Dropbox or Google Drive. For more information, read our blog post on <a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus/">How to Backup Your WordPress Website with UpdraftPlus</a>. </p>
 
                 <h2>5. WooCommerce</h2>
 
