--- a/ecommerce-websites.html
+++ b/ecommerce-websites.html
@@ -182,7 +182,7 @@ permalink: /ecommerce-websites/
 
                 <h2>Sybiltec's E-commerce Website Service</h2>
 
-                <p>My e-commerce website service consists of website design and development of an online store on either Shopify or WooCommerce, depending on your preference and requirements. If you are not sure which platform is right for you, I can advise you to make the best choice. For more information, you can also read my blog post on <a href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce: What are the Differences?</a></p>
+                <p>My e-commerce website service consists of website design and development of an online store on either Shopify or WooCommerce, depending on your preference and requirements. If you are not sure which platform is right for you, I can advise you to make the best choice. For more information, you can also read our blog post on <a href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce: What are the Differences?</a></p>
 
                 <h3>E-commerce Website Migration</h3>
 
