--- a/faqs.html
+++ b/faqs.html
@@ -52,7 +52,7 @@ permalink: /faqs/
                 "name": "What are the differences between Shopify and WooCommerce?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text": "Please read my blog article on Shopify vs WooCommerce: What Are the Differences? which compares the world's two most popular e-commerce platforms."
+                  "text": "Please read our blog article on Shopify vs WooCommerce: What Are the Differences? which compares the world's two most popular e-commerce platforms."
                 }
               }, {
                 "@type": "Question",
@@ -74,7 +74,7 @@ permalink: /faqs/
                 "name": "How do I update my WordPress website?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text":"Please take a look at my blog post: A Guide to Updating Your WordPress Website."
+                    "text":"Please take a look at our blog post: A Guide to Updating Your WordPress Website."
                 }
             }, {
                 "@type": "Question",
@@ -144,7 +144,7 @@ permalink: /faqs/
                 "name": "What can I expect from the website design process?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text": "You can read about my complete website design process in my blog post, The Web Design Process Explained in 12 Easy Steps."
+                  "text": "You can read about my complete website design process in our blog post, The Web Design Process Explained in 12 Easy Steps."
                 }
               }, {
                 "@type": "Question",
@@ -344,7 +344,7 @@ permalink: /faqs/
                 <p>WordPress is the most flexible platform, so if you need a website that will adapt as your business grows, then I would recommend WordPress. However, there is a learning curve associated with it, so if your time is limited and you want to get started more quickly, then Wix would be more suitable as it's user-friendly for those who are managing their first website. Then finally we have Shopify: if you run an e-commerce business then Shopify is the best choice as it includes everything you need to get started with selling your products or services online.</p>
 
                 <h3>What are the differences between Shopify and WooCommerce?</h3>
-                <p>Please read my blog article on <a href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce: What Are the Differences?</a> which compares the world's two most popular e-commerce platforms.</p>
+                <p>Please read our blog article on <a href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce: What Are the Differences?</a> which compares the world's two most popular e-commerce platforms.</p>
 
                 <h3>How can I improve the design of my homepage?</h3>
                 <p>Here are a few tips that you can apply to improve the design of your homepage:</p>
@@ -358,7 +358,7 @@ permalink: /faqs/
                 </ol>
 
                 <h3>How do I update my WordPress website?</h3>
-                <p>Please take a look at my blog post: <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">A Guide to Updating Your WordPress Website</a>.</p>
+                <p>Please take a look at our blog post: <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">A Guide to Updating Your WordPress Website</a>.</p>
 
                 <h3>Which Shopify plan is best for me?</h3>
                 <p>If you are just beginning your e-commerce business, then I would recommend choosing the Basic Shopify plan which provides everything you need to start selling your products or services online. When you feel that you are ready to take your business to the next level, you can upgrade to the Shopify plan, which offers advanced features and an enhanced e-commerce experience.</p>
@@ -409,7 +409,7 @@ permalink: /faqs/
                 <p>Preferably, I would like to work with documents submitted via Google Drive - I can provide you with a link to a shared folder. Alternatively, please send me the content by email.</p>
 
                 <h3>What can I expect from the website design process?</h3>
-                <p>You can read about my complete website design process in my blog post, <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process Explained in 12 Easy Steps</a>.</p>
+                <p>You can read about my complete website design process in our blog post, <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process Explained in 12 Easy Steps</a>.</p>
 
                 <h3>Would we need to meet in person?</h3>
                 <p>I operate on a remote working basis, so it's possible for us to hold all meetings online. I can meet via Zoom, Google Meet or Microsoft Teams. However, if we are within a travelling distance of each other, I would highly recommend that we meet in person at least for our initial meeting.</p>
