--- a/fix-slow-wordpress-website.html
+++ b/fix-slow-wordpress-website.html
@@ -234,7 +234,7 @@ permalink: /fix-slow-wordpress-website/
 
                 <p>You will also need to check for updates to WordPress core files.</p>
                     
-                <p>For more information on the right way to update WordPress plugins and files, refer to my blog post, <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">A Guide to Updating Your WordPress Website</a>.</p>
+                <p>For more information on the right way to update WordPress plugins and files, refer to our blog post, <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">A Guide to Updating Your WordPress Website</a>.</p>
 
                 <h2>5. Your Website is Not Running on the Latest Version of PHP</h2>
 
