--- a/google-search-console.html
+++ b/google-search-console.html
@@ -50,12 +50,12 @@ permalink: /google-search-console/
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>How to Use Google Search Console: a Quick Guide | Sybiltec</title>       
-        <meta name="Description" content="Google Search Console is essential for improving your website's search performance. Read my blog for a quick overview on how to use the tool. ">
+        <meta name="Description" content="Google Search Console is essential for improving your website's search performance. Read our blog for a quick overview on how to use the tool. ">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="How to Use Google Search Console: a Quick Guide | Sybiltec" />
-        <meta property="og:description" content="Google Search Console is essential for improving your website's search performance. Read my blog for a quick overview on how to use the tool. " />
+        <meta property="og:description" content="Google Search Console is essential for improving your website's search performance. Read our blog for a quick overview on how to use the tool. " />
         <meta property="og:url" content="https://sybiltec.com/google-search-console/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/google-search-console-350x183.jpg" />
