--- a/install-ga4-wordpress-website.html
+++ b/install-ga4-wordpress-website.html
@@ -50,13 +50,13 @@ permalink: /install-ga4-wordpress-website/
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>How to Install GA4 on Your WordPress Website | Sybiltec</title>       
-        <meta name="Description" content="Do you need to install GA4 on your WordPress website? Read my blog article to learn how to add Google Analytics using the free MonsterInsights plugin.">
+        <meta name="Description" content="Do you need to install GA4 on your WordPress website? Read our blog article to learn how to add Google Analytics using the free MonsterInsights plugin.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/install-ga4-wordpress-website/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="How to Install GA4 on Your WordPress Website | Sybiltec" />
-        <meta property="og:description" content="Do you need to install GA4 on your WordPress website? Read my blog article to learn how to add Google Analytics using the free MonsterInsights plugin." />
+        <meta property="og:description" content="Do you need to install GA4 on your WordPress website? Read our blog article to learn how to add Google Analytics using the free MonsterInsights plugin." />
         <meta property="og:url" content="https://sybiltec.com/install-ga4-wordpress-website/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/person-using-google-analytics-on-macbook-air-350x183.jpg" />
