--- a/blog-2.html
+++ b/blog-2.html
@@ -32,13 +32,13 @@ permalink: /blog-2/
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blog Page 2 | Web Designer Erith South East London</title>       
-        <meta name="Description" content="Sybiltec provides website development and e-commerce services for SMEs. Read my blog posts to learn about the latest industry news and company updates.">
+        <meta name="Description" content="Sybiltec provides website development and e-commerce services for SMEs. Read our blog posts to learn about the latest industry news and company updates.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/blog-2/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Blog Page 2 | Web Designer Erith Bexley South East London" />
-        <meta property="og:description" content="Sybiltec provides website development and e-commerce services for SMEs. Read my blog posts to learn about the latest industry news and company updates." />
+        <meta property="og:description" content="Sybiltec provides website development and e-commerce services for SMEs. Read our blog posts to learn about the latest industry news and company updates." />
         <meta property="og:url" content="https://sybiltec.com/blog-2/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
