--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
         <div class="testimonials section container-1140">
             <h2 class="center">What Customers Say</h2>
             <hr>
+            <p class="center">See the testimonials below of our clients' experiences of working with us as their web designer. All customers are delighted with our services; as a result, many choose us to be their trusted partner for working together on a long-term basis.</p>
             <div class="row">
                 <div class="col-6">
                     <div class="testimonial-card">
@@ -259,9 +260,9 @@
         <div class="blog section">
             <div class="container-1140 padding-top">
                 <div class="center">
-                    <h2>Blog</h2>
+                    <h2>What We Say</h2>
                     <hr>
-                    <p>Read my selection of blog posts for web design tips and advice, guides to help you make the most of your website, and the latest news from Sybiltec.</p>
+                    <p>Read our selection of blog posts for web design tips and advice, guides to help you make the most of your website, and the latest news from Sybiltec.</p>
                 </div>
                 <div class="row">
                     <div class="col-4">  
@@ -315,7 +316,7 @@
         </div>
         <div class="partners section center grey">
             <div class="container-1140">
-                <h2>Partners</h2>
+                <h2>Who We Work With</h2>
                 <hr>
                 <div class="row">
                     <div class="col-2">
