--- a/training.html
+++ b/training.html
@@ -167,23 +167,23 @@ permalink: /training/
                         Training
                     </li>
                 </ol>
-                <p>I am available to facilitate your workshop or webinar. Here are some examples of events I've taken part in previously.</p>
+                <p>We available to facilitate your workshop or webinar. Here are some examples of events we've taken part in previously.</p>
                 <h2>Workshops</h2>
                 <div class="row">
                     <div class="col-6"><div><img src="https://sybiltec.com/images/start-up-bromley-business-week.png" style="width:100%; max-width:560px;" alt="Start Up Bromley Business Week. Workshops and events running Monday 14th March - Saturday 19th March"></div></div>
-                    <div class="col-6"><p>In March 2022, as part of Start Up Bromley Business Week, I presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>.</p><div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/business-week-day-1-e-commerce-deep-dive-selling-your-products-online-tickets-272059095077" target="_blank" rel="noopener noreferrer">Read More</a></div></div>
+                    <div class="col-6"><p>In March 2022, as part of Start Up Bromley Business Week, Sybil presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>.</p><div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/business-week-day-1-e-commerce-deep-dive-selling-your-products-online-tickets-272059095077" target="_blank" rel="noopener noreferrer">Read More</a></div></div>
                 </div>
                 
                 <div class="row">
                     <div class="col-6"><div><img src="https://sybiltec.com/images/sybil-mayard-consultant-conquering-social-media-day.jpg" style="width:100%; max-width:560px;" alt="Sybil Mayard, consultant at Conquering Social Media Day"></div></div>
-                    <div class="col-6"><p>In March 2023, as part of Start Up Business Week 2023, I participated in <em>Conquering Social Media Day</em> as a Consultant, advising small businesses on a 1-2-1 basis on how to improve the design of their website.</p>
+                    <div class="col-6"><p>In March 2023, as part of Start Up Business Week 2023, Sybil participated in <em>Conquering Social Media Day</em> as a Consultant, advising small businesses on a 1-2-1 basis on how to improve the design of their website.</p>
                         <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.com/e/conquering-social-media-day-tickets-539198997717" target="_blank" rel="noopener noreferrer">Read More</a></div>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-6"><div><img src="https://sybiltec.com/images/sybil-mayard-gary-parker-at-british-library.jpg" style="width:100%; max-width:560px;" alt="Sybil Mayard and Gary Parker at the British Library"></div></div>
-                    <div class="col-6"><p>On 25 April 2023, my colleague Gary Parker and I delivered our popular in-person workshop, <em>Funding and Opportunities for E-commerce</em>, in association with the British Library.</p>
+                    <div class="col-6"><p>On 25 April 2023, Sybil and her colleague Gary Parker delivered our popular in-person workshop, <em>Funding and Opportunities for E-commerce</em>.</p>
                         <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/funding-and-opportunities-for-e-commerce-free-live-event-tickets-566384680827" target="_blank" rel="noopener noreferrer">Read More</a></div>
                     </div>
                 </div>
@@ -194,8 +194,8 @@ permalink: /training/
                     <div class="col-6"><div style="max-width: 560px; margin-left: auto; margin-right: auto;"><div class="videoWrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/6cd6ErRLOFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 </div>
                 </div>
-                    <div class="col-6"><p>I am a regular guest speaker on webinars hosted by <a href="https://www.cntassociates.com" target="_blank" rel="noopener noreferrer">CNT Associates</a>, where I present on various topics ranging from the basics of getting your business online, to setting up an e-commerce store with Shopify.</p>
-                    <p>Watch the video of our webinar <em>Building an Online Store Using Shopify</em>, which was delivered in association with the British Library.</p></div>
+                    <div class="col-6"><p>Sybil is a regular guest speaker on webinars hosted by <a href="https://www.cntassociates.com" target="_blank" rel="noopener noreferrer">CNT Associates</a>, where we present on various topics ranging from the basics of getting your business online, to setting up an e-commerce store with Shopify.</p>
+                    <p>Watch the video of our webinar <em>Building an Online Store Using Shopify</em>.</p></div>
                 </div>
                 
             </div>
